--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,11 +1,149 @@
+/* Estilos generales */
 
-.navegacion-container{
-    background-color: black;
-    display: flex;
-}
-
-.navegacion-imagen>img{
-    width: 200px;
-    height: 200px;
+* {
+    box-sizing: border-box;
     margin: 0;
-}
+    padding: 0;
+  }
+  
+  body {
+    font-family: sans-serif;
+    font-size: 16px;
+  }
+  
+  /* Estilos para la navegación */
+  
+  .navegacion-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    background-color: #333;
+  }
+  
+  .navegacion-imagen img {
+    height: 60px;
+  }
+  
+  .navegacion-item {
+    display: flex;
+  }
+  
+  .navegacion-item a {
+    color: white;
+    text-decoration: none;
+    margin-right: 20px;
+    padding: 10px;
+  }
+  
+  .navegacion-item a:hover {
+    background-color: white;
+    color: #333;
+  }
+  
+  /* Estilos para el banner */
+  
+  .banner {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    background-color: #eee;
+  }
+  
+  .banner img {
+    width: 100%;
+    max-width: 300px;
+    margin-bottom: 20px;
+  }
+  
+  /* Estilos para los animales */
+  
+  .animales-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    background-color: #fff;
+  }
+  
+  .animales-container a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+    color: #333;
+    margin: 20px;
+    padding: 10px;
+  }
+  
+  .animales-container img {
+    width: 100%;
+    max-width: 200px;
+    margin-bottom: 10px;
+  }
+  
+  /* Estilos para las categorías */
+  
+  .categorias-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 20px;
+    background-color: #eee;
+  }
+  
+  .categorias-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 20px;
+    max-width: 200px;
+  }
+  
+  .categorias-item img {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  
+  /* Estilos para las marcas */
+  
+  .Marcas {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    background-color: #fff;
+  }
+  
+  .Marcas img {
+    width: 100%;
+    max-width: 150px;
+    margin: 20px;
+  }
+  
+  /* Estilos para el footer */
+  
+  .footer-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    background-color: #333;
+    color: #fff;
+  }
+  
+  .footer-container p {
+    margin-right: 10px;
+  }
+  
+  .footer-container a {
+    color: #fff;
+    text-decoration: none;
+  }
+  
