--- a/estilos/style.css
+++ b/estilos/style.css
@@ -18,7 +18,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background-color: #333;
+    background-color: #ced9b7;
   }
   
   .navegacion-imagen img {
@@ -30,15 +30,15 @@
   }
   
   .navegacion-item a {
-    color: white;
+    color: #004800;
     text-decoration: none;
     margin-right: 20px;
     padding: 10px;
+    font-weight: bold;
   }
   
   .navegacion-item a:hover {
-    background-color: white;
-    color: #333;
+    color: white;
   }
   
   /* Estilos para el banner */
